# PIAACMCsimul

./: CMakeLists.txt  Makefile.am  Makefile.in  PIAACMC_FPM_process.c  PIAACMC_FPMresp_resample.c  PIAACMC_FPMresp_rmzones.c  PIAACMC_f_evalmask.c  PIAACMCsimul.c  PIAACMCsimul.h  PIAACMCsimul_CA2propCubeInt.c  PIAACMCsimul_achromFPMsol_eval.c  PIAACMCsimul_achromFPMsol_eval_zonezderivative.c  PIAACMCsimul_computePSF.c  PIAACMCsimul_eval_poly_design.c  PIAACMCsimul_exec.c  PIAACMCsimul_exec_computePSF_no_fpm.c  PIAACMCsimul_exec_compute_image.c  PIAACMCsimul_exec_multizone_fpm_calib.c  PIAACMCsimul_exec_optimize_PIAA_shapes.c  PIAACMCsimul_exec_optimize_PIAA_shapes_fpmtransm.c  PIAACMCsimul_exec_optimize_fpm_zones.c  PIAACMCsimul_exec_optimize_fpmtransmission.c  PIAACMCsimul_exec_optimize_lyot_stop_position.c  PIAACMCsimul_exec_optimize_lyot_stops_shapes_positions.c  PIAACMCsimul_free.c  PIAACMCsimul_geomProp.c  PIAACMCsimul_init.c  PIAACMCsimul_init_geomPIAA_rad.c  PIAACMCsimul_initpiaacmcconf.c  PIAACMCsimul_load2DRadialApodization.c  PIAACMCsimul_loadsavepiaacmcconf.c  PIAACMCsimul_makePIAAshapes.c  PIAACMCsimul_measure_transm_curve.c  PIAACMCsimul_mkFPM_zonemap.c  PIAACMCsimul_mkFocalPlaneMask.c  PIAACMCsimul_mkLyotMask.c  PIAACMCsimul_mkPIAAMshapes_from_RadSag.c  PIAACMCsimul_mkSimpleLyotStop.c  PIAACMCsimul_optimizeLyotStop.c  PIAACMCsimul_rings2sectors.c  (+3 more)
doc/: PIAACMCsimul_Ccode.md  PIAACMCsimul_DesignSteps_Mono.md  PIAACMCsimul_DesignSteps_Poly.md  PIAACMCsimul_GettingStarted.md  PIAACMCsimul_Introduction.md
docdir/: PIAACMCsimul_script_run.html  PIAACMCsimul_script_run.md.post  PIAACMCsimul_script_runPIAACMC.html  PIAACMCsimul_script_runPIAACMC.md.post  PIAACMCsimul_script_runopt.html  PIAACMCsimul_script_runopt.md.post  PIAACMCsimul_script_sim.html  PIAACMCsimul_script_sim.md.post
examples/: LUVOIRpup4096.txt  mkLUVOIRpup  mkMagAOXpup  mkMagPup  mkSubPup  setup_SPEED  setup_SPEED1024  setup_SPEED1024_noinvPIAA
scripts/: run  runPIAACMC  runPIAACMCdesign  runclean  runopt  setconf  sim  syncscripts
